white space issue resolved

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -618,3 +618,7 @@ textarea:focus {
 .flex-end {
     align-items: flex-end;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
